lower/src/ast2ir/snapshots/long_lower__ast2ir__parse_and_lower_func2.snap
---
source: lower/src/ast2ir/mod.rs
expression: decls

---
[
    Ok(
        FuncDef(
            FuncDef {
                name: Global(
                    [
                        "main",
                    ],
                ),
                sig: FuncSignature {
                    ret: Int(
                        Signed,
                    ),
                    params: [],
                },
                body: BlockStmt(
                    [
                        Located {
                            inner: Expr(
                                Located {
                                    inner: Assign(
                                        None,
                                        Located {
                                            inner: Literal(
                                                Local(
                                                    Id {
                                                        idx: 0,
                                                    },
                                                ),
                                            ),
                                            loc: None:1:21,
                                        },
                                        Located {
                                            inner: Literal(
                                                Int(
                                                    Int(
                                                        10,
                                                    ),
                                                ),
                                            ),
                                            loc: None:1:21,
                                        },
                                    ),
                                    loc: None:1:21,
                                },
                            ),
                            loc: None:1:21,
                        },
                        Located {
                            inner: Return(
                                Some(
                                    Located {
                                        inner: Literal(
                                            Int(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                        ),
                                        loc: None:1:36,
                                    },
                                ),
                            ),
                            loc: None:1:29,
                        },
                    ],
                ),
                locals: Locals { (Id { idx: 0 }, Local { name: "i", ty: Int(Signed) }) },
            },
        ),
    ),
]
